# vicsek-data-assimilation

./: .gitignore  Readme.md  main.py  pyproject.toml  savesfilter.npy  savesmodel.npy
AB_Data_Assimilation.egg-info/: PKG-INFO  SOURCES.txt
Notebooks/: Tests.ipynb
Notebooks/.ipynb_checkpoints/: Tests-checkpoint.ipynb
analyze/: analyze.py  dataset_analyze.py  kalmann.py  run_analysis.py
dataset/: ExtractData.ipynb
experiments/: parameters.py  run_kalmanparam_experiments.py  run_noise_experiments.py  run_phase_experiments.py
saves/Baseline/: 1_filter.npy  1_model.npy  2_filter.npy  2_model.npy  metrics.json  params.json
saves/Obsv_noise_0.0001/: 10_filter.npy  1_filter.npy  2_filter.npy  2_model.npy  3_filter.npy  4_filter.npy  4_model.npy  5_filter.npy  6_filter.npy  7_filter.npy  7_model.npy  8_filter.npy  9_filter.npy  params.json
saves/Obsv_noise_0.001/: 10_filter.npy  1_filter.npy  2_filter.npy  3_filter.npy  4_filter.npy  5_filter.npy  5_model.npy  6_filter.npy  7_filter.npy  (+3 more)
src/: Static_Plots.ipynb  Static_Plots_Joel.ipynb  analyse.py  analyze.py  animation.py  config.py  dataset_analyze.py  generate.py  kalman.py  kalman_experimental.ipynb  kalman_old.py  kalman_paramesti.py  kalman_simon.py  kalman_test.py  klaman.py  misc.py  model.py  new_run_experiments.py  particle.py  plotting.py  polygons.py  run_analysis.py  run_experiments.py  run_phase_experiments.py  scratch_henrik.ipynb  scrips.py  test.py  vicsek.py  vicsek_paramesti.py  visualize.py
tests/: test.ipynb
visualization/: Static_Plots.ipynb  animation.py  plotting.py  visualize.py
(+68 files in other folders)
